# maths

./: README.md  REVAMP.md  conftest.py  progress.py  pyproject.toml
coursework/0-foundations-of-mathematics/basic-algebra/problems/: 01_polynomials.py  02_linear_systems.py
coursework/0-foundations-of-mathematics/introduction-to-functions/problems/: 01_functions_and_mappings.py  02_sequences_and_series.py
coursework/0-foundations-of-mathematics/logic-and-proofs/problems/: 02_propositional_logic.py  03_proof_techniques.py
coursework/0-foundations-of-mathematics/sets-and-number-theory/problems/: 04_prime_numbers.py  05_relations_and_equivalences.py
coursework/0-foundations-of-mathematics/sets-and-number-theory/tests/: test_01_set_operations.py
coursework/1-discrete-mathematics-and-combinatorics/combinatorics-and-counting/problems/: 01_combinatorics.py  02_pigeonhole_principle.py  03_generating_functions.py
coursework/1-discrete-mathematics-and-combinatorics/discrete-structures/problems/: 01_boolean_algebra.py  02_lattices_and_posets.py
coursework/1-discrete-mathematics-and-combinatorics/graph-theory/problems/: 01_graph_theory_basics.py  02_shortest_paths.py  03_trees_and_spanning.py
coursework/1-foundations/differential-equations/problems/: 01_separable_ode.py  04_nonhomogeneous_ode.py
coursework/1-foundations/discrete-math-intro-to-proofs/problems/: 01_set_operations.py  02_induction.py  03_modular_arithmetic.py  06_logic_and_proof_techniques.py
coursework/1-foundations/multivariable-calculus/problems/: 01_partial_derivatives.py  06_line_integral.py
(+77 files in other folders)
